# fastkml

./: .coderabbit.yaml  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .sourcery.yaml  .travis.yml  .yamllint  MANIFEST.in  README.rst  _typos.toml  ellipsis.Dockerfile  ellipsis.yaml  introspect.py  pyproject.toml  remove_unused_type_ignores.py  requirements.txt  setup.py  sonar-project.properties  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  codesee-arch-diagram.yml  pr_agent.yml  run-all-tests.yml  sonarcloud.yml
docs/: CONTRIBUTORS.txt  Configuration.rst  Document-clean.kml  HISTORY.rst  HISTORY.txt  LICENSE.txt  Makefile  TODO.txt  alternatives.rst  conf.py  configuration.rst  contributing.rst  create_kml_files.rst  fastkml.rst  index.rst  installing.rst  kml.rst  modules.rst  network.kml  quickstart.rst  reference_guide.rst  requirements.txt  upgrading.rst  usage_guide.rst  working_with_kml.rst
examples/: CreateKml.py  README.md  ReadKml.py  UsageExamples.py  gx_cascading_style.kml  ne_110m_admin_0_countries.README.html  owid-co2-data.csv  read_kml.py  shp2kml.py  shp2kml_timed.py  simple_example.py  transform_cascading_style.py
fastkml/: __init__.py  about.py  atom.py  base.py  config.py  containers.py  data.py  enums.py  exceptions.py  features.py  geometry.py  gx.py  gx_data.py  helpers.py  kml.py  kml_base.py  links.py  mixins.py  model.py  network_control.py  network_link_control.py  overlays.py  registry.py  styles.py  test_main.py  tests.py  times.py  types.py  update.py  utils.py  validate.py  validator.py  views.py
fastkml/schema/: kml22gx.xsd  ogckml22.xsd  xAL.xsd
fastkml/tests/: atom_test.py  base_test.py  config_test.py  geometry_test.py  gx_test.py  kml_test.py  oldunit_test.py  styles_test.py  views_test.py
requirements/: common.txt  test.txt
tests/: atom_test.py  base.py  base_test.py  config_test.py  conftest.py  containers_test.py  data_test.py  features_test.py  geometry_test.py  gx_test.py  helper_test.py  kml_test.py  links_test.py  model_test.py  network_link_control_test.py  oldunit_test.py  overlays_test.py  registry_test.py  repr_eq_test.py  styles_test.py  times_test.py  utils_test.py  validator_test.py  views_test.py
tests/geometries/: boundaries_test.py  coordinates_test.py  functions_test.py  geometry_test.py  linearring_test.py  linestring_test.py  multigeometry_test.py  point_test.py  polygon_test.py
tests/hypothesis/: atom_test.py  common.py  container_test.py  data_test.py  feature_test.py  geometry_test.py  gx_data_test.py  gx_test.py  kml_test.py  links_test.py  model_test.py  multi_geometry_test.py  network_link_control_test.py  overlay_test.py  strategies.py  style_test.py  times_test.py  views_test.py
tests/ogc_conformance/: ogc_kml_test.py
tests/ogc_conformance/data/: LICENSE.txt  README.md
tests/ogc_conformance/data/kml/: Document-clean.kml  Document-deprecated.kml  Document-places.kml  KML_Samples.kml  LinearRingWith1DTuple.kml  LinearRingWithInvalidLat.kml  emptyPlacemarkWithoutId.xml  output.kml  output.kmz
tests/ogc_conformance/data/kml/custom/: Data-Duplicate.xml  Data-Ok.xml  SchemaData-InvalidDatum.xml  SchemaData-NoSchema.xml  SchemaData-Ok.xml  SchemaData-RemoteSchema.xml  SimpleField-Ok.xml  SimpleField-UnsupportedType.xml
tests/ogc_conformance/data/kml/features/: Folder-Empty.xml  PhotoOverlay-HrefParamsWithoutImagePyramid.xml  PhotoOverlay-NotImage.xml  PhotoOverlay-PyramidWithoutHref.xml  PhotoOverlay.xml  Placemark-Author.xml
tests/ogc_conformance/data/kml/links/: GroundOverlay-httpRef.xml  Link-BadHttpQuery.xml  Link.xml  NetworkLink-NotFound.xml  NetworkLink-relativeRef.xml  Update-NoTarget.xml  Update-Placemark.xml
tests/ogc_conformance/data/kml/models/: Model-AliasTargetMissing.xml  Model-ResourceMap-Invalid.xml  Model-ResourceMap.xml  cube.dae  model_relative_target.kml  un.dae
tests/ogc_conformance/data/kml/spatial/: LatLonAltBox-SgtN.xml  LineString-ClampToGround.xml  LineString-Tessellate.xml  Placemark-TruncatedLineString.xml  Polygon-Absolute.xml  invalidPolygonBoundary.xml
tests/ogc_conformance/data/kml/styles/: StyleMap-DuplicateKeys.xml  StyleMap-Error.xml  StyleMap-Ok.xml  styleUrl-fileRef.xml  styles.xml
tests/ogc_conformance/data/kml/views/: LookAt-ClampToGround.xml  LookAt-Error.xml  LookAt-MissingAltitudeMode.xml  LookAt-MissingAltitudeModeAndAltitude.xml  LookAt-Ok.xml
tests/ogc_conformance/data/kmz/: archive-1.kmz  small_world.kmz
