[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
]

[project]
description = "Fast KML processing in python"
name = "fastkml"
version = "1.0.alpha.6"

[project.license]
authors = [
    { email = "christian.ledermann@gmail.com", name = "Christian Ledermann" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pygeoif>=1.1",
    "python-dateutil",
    "typing-extensions>4",
]
requires-python = ">=3.7"
text = "LGPL"

[project.optional-dependencies]
complexity = [
    "lizard",
    "radon",
]
dev = [
    "fastkml[complexity]",
    "fastkml[tests]",
    "fastkml[typing]",
    "pre-commit",
]
tests = [
    "pytest",
    "pytest-cov",
]
typing = [
    "mypy",
    "types-python-dateutil",
    "types-setuptools",
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"
keywords = [
    "GIS",
    "Google",
    "KML",
    "Maps",
    "OpenLayers",
]

[project.urls]
Homepage = "https://github.com/cleder/fastkml"

[tool.check-manifest]
ignore = [
    ".*",
    "examples/*",
    "mutmut_config.py",
    "test-requirements.txt",
    "tox.ini",
]

[tool.flake8]
max_line_length = 89

[tool.isort]
force_single_line = true
line_length = 88

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    "fastkml.kml",
    "fastkml.tests.config_test",
    "fastkml.tests.oldunit_test",
    "fastkml.views",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".pyre",
    ".pytype",
]
include = [
    "fastkml",
]

[tool.ruff.extend-per-file-ignores]
"setup.py" = [
    "E501",
]
"tests/oldunit_test.py" = [
    "E501",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "ez_setup",
]
namespaces = false
