[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
]

[project]
authors = [
    { email = "christian.ledermann@gmail.com", name = "Christian Ledermann" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]
dependencies = [
    "arrow",
    "pygeoif>=1.5",
    "typing-extensions>4",
]
description = "Fast KML processing in python"
dynamic = [
    "version",
]
name = "fastkml"
requires-python = ">=3.8"

[project.license]
text = "LGPL"

[project.optional-dependencies]
complexity = [
    "lizard",
    "radon",
]
dev = [
    "fastkml[complexity]",
    "fastkml[docs]",
    "fastkml[linting]",
    "fastkml[lxml]",
    "fastkml[tests]",
    "fastkml[typing]",
    "pre-commit",
    "shapely",
]
docs = [
    "Sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]
linting = [
    "black",
    "flake8",
    "flake8-comments",
    "flake8-encodings",
    "flake8-expression-complexity",
    "flake8-length",
    "flake8-pep3101",
    "flake8-super",
    "flake8-typing-imports",
    "ruff",
    "yamllint",
]
lxml = [
    "lxml",
]
tests = [
    "pytest",
    "pytest-cov",
]
typing = [
    "mypy",
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"
keywords = [
    "GIS",
    "Google",
    "KML",
    "Maps",
    "OpenLayers",
]

[project.urls]
Changelog = "https://github.com/cleder/fastkml/blob/develop/docs/HISTORY.rst"
Documentation = "https://fastkml.readthedocs.org/"
Homepage = "https://github.com/cleder/fastkml"

[tool.check-manifest]
ignore = [
    ".*",
    "examples/*",
    "mutmut_config.py",
    "test-requirements.txt",
    "tox.ini",
]

[tool.coverage.paths]
source = [
    "fastkml",
    "tests",
]

[tool.coverage.report]
exclude_also = [
    "^\\s*\\.\\.\\.$",
    "except AssertionError:",
    "except ImportError:",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true

[tool.flake8]
max_line_length = 89

[tool.isort]
force_single_line = true
line_length = 88

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
overrides = [
    { disable_error_code = "attr-defined, union-attr", module = "tests.oldunit_test" },
    { disable_error_code = "union-attr", module = "tests.*" },
]
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".pyre",
    ".pytype",
]
include = [
    "fastkml",
]

[tool.ruff]
fix = true
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "A002",
    "ANN101",
    "ANN102",
    "ANN401",
    "D203",
    "D212",
    "FA100",
    "PLR0913",
]
select = [
    "A",
    "AIR",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "CPY",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.extend-per-file-ignores]
"fastkml/helpers.py" = [
    "ARG001",
    "PLR0913",
]
"tests/*.py" = [
    "D101",
    "D102",
    "D103",
    "D104",
    "PLR2004",
    "S101",
    "SLF001",
]
"tests/oldunit_test.py" = [
    "E501",
]
"tests/repr_eq_test.py" = [
    "E501",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic.version]
attr = "fastkml.about.__version__"

[tool.setuptools.packages.find]
exclude = [
    "docs/*",
]
include = [
    "fastkml*",
    "fastkml/py.typed",
]
namespaces = false
